<resources>
    <string name="app_name">Recipes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_ricetta">Ricetta</string>
    <string name="title_activity_add_ricetta">AddRicettaActivity</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string-array name="category">
        <item>Primo</item>
        <item>Secondo</item>
        <item>Dolce</item>
        <item>Aperitivo</item>
        <item>Nessuna</item>
    </string-array>

    <string-array name="units">
        <item>g</item>
        <item>ml</item>
        <item>kg</item>
        <item>l</item>
        <item>q.b.</item>
        <item>cucchiaio</item>
        <item>cucchiaino</item>
        <item>tazza</item>
        <item> </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_page_sliding_add_ricetta">ActivityPageSlidingAddRicetta</string>
    <string name="search_hint">name</string>
    <string name="search_result">Search_result</string>
    <string name="search">"Search"</string>
    <string name="action_edit">modifica</string>
    <string name="save">Salva</string>
    <string name="action_delete">Elimina</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="giallozafferano">GialloZafferano</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="importa_ricetta">Importa ricetta</string>
    <string name="aggiungi_ricetta">Aggiungi ricetta</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="searchbookmark">searchBookmark</string>
    <string name="calculate">calculate</string>
    <string name="calculate_num_porz">Inserisci il nuovo numero di porzioni</string>
    <string name="calculate_string">Calcola</string>
    <string name="sic_in_corso">Sincronizzazione in corso...</string>
    <string-array name="limit_show_ricette">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>Tutte</item>
    </string-array>
    <string-array name="type_visualization">
        <item>anteprima</item>
        <item>elenco</item>
    </string-array>
    <string name="title_activity_sinc">SincActivity</string>
</resources>
