<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.oropallo.assunta.recipes.RicettaActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_delete" />
    <item
        android:id="@+id/action_add_bookmark"
        android:title="@string/add_bookmark"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_name" />
    <item
        android:id="@+id/action_calculate"
        android:title="@string/calculate"
        app:showAsAction="always"
        android:icon="@drawable/ic_claculate" />
</menu>
